unpackaged/objects/Week__c.object
<CustomObject>
    <fields>
        <fullName>Month_Number__c</fullName>
        <label>Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Week</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>